# mini-codex

./: .gitignore  DESIGN.md  README.md  SPEC.md  agent.py  approval.py  config.py  history.py  llm_client.py  main.py  pyproject.toml  tools.py
